--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,5 +1,5 @@
-<%= form_tag({controller: 'accounts', action: 'login'}) do %>
-  <%= text_field_tag(:username, '', placeholder: 'username') %>
-  <%= password_field_tag(:password, '', placeholder: 'password') %>
-  <%= submit_tag %>
+<%= form_for(:account, url: accounts_login_path) do |f| %>
+  <%= f.text_field(:username, placeholder: 'username') %>
+  <%= f.password_field(:password, placeholder: 'password') %>
+  <%= f.submit %>
 <% end %>
