accounts controller action 검증들 추가

--- a/app/views/accounts/new.html.erb
+++ b/app/views/accounts/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(:account, url: accounts_create_path) do |f| %>
+<%= form_for(:accounts, url: accounts_create_path) do |f| %>
   <%= f.text_field :username, placeholder: 'username' %>
   <%= f.password_field :password, placeholder: 'password' %>
   <%= f.password_field :password_repeat, placeholder: 'password_repeat' %>
