--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(:account, url: accounts_login_path) do |f| %>
+<%= form_for(:accounts, url: accounts_login_path) do |f| %>
   <%= f.text_field(:username, placeholder: 'username') %>
   <%= f.password_field(:password, placeholder: 'password') %>
   <%= f.submit %>
