게임 시작 기능 추가

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -2,8 +2,8 @@ Id : <%= @game.id %> <br />
 Status : <%= @game.status %> <br />
 
 <%# TODO: 한명만 있을땐 한명만 보이게 처리 %>
-Player 1 : <%= @game.game_players.first.id %> <br />
-Player 2 : <%= @game.game_players.last.id %> <br />
+Player 1 : <%= @game_player_first_id %> <br />
+Player 2 : <%= @game_player_last_id %> <br />
 
 <%# TODO: if game is full, hide below %>
 <%= form_tag games_join_path do %>
