게임 새로 만들기 버튼 추가

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,3 +1,4 @@
+<%= link_to 'New', games_new_path %> <br />
 <% @games.each do |game| %>
   <%= link_to game.id, games_show_path(game_id: game.id) %>
 <% end %>
