--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -21,3 +21,9 @@ Player 2 : <%= @game_player_last_id %> <br />
   <%= hidden_field_tag 'game_id', @game.id %>
   <%= submit_tag 'game leave' %>
 <% end %>
+<%= hidden_field_tag 'game_id', @game.id %>
+
+<%= form_tag games_ping_path do %>
+  <%= hidden_field_tag 'game_id', @game.id %>
+  <%= submit_tag 'ping' %>
+<% end %>
