게임 시작 후 상태 메세지 변경 및 타이머 추가

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,5 +1,6 @@
 Id : <%= @game.id %> <br />
-Status : <%= @game.status %> <br />
+<div id='status'>Status : <span><%= @game.status %></div></div> <br />
+<div id='remain_time'>Remain Time : <span id='count'></span></div>
 
 <%# TODO: 한명만 있을땐 한명만 보이게 처리 %>
 <div class='player' id='first_player'>
