--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -28,7 +28,5 @@ Id : <%= @game.id %> <br />
 <% end %>
 <%= hidden_field_tag 'game_id', @game.id %>
 
-<%= form_tag games_ping_path do %>
-  <%= hidden_field_tag 'game_id', @game.id %>
-  <%= submit_tag 'ping' %>
-<% end %>
+<div class='game_board'>
+</div>
