game 생성할때 title 받게 수정

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,4 +1,5 @@
 Id : <%= @game.id %> <br />
+Title : <%= @game.title %> <br />
 <div id='status'>Status : <span><%= @game.status %></div></div> <br />
 <div id='remain_time'>Remain Time : <span id='count'></span></div>
 
