--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,3 +1,4 @@
 <%= form_for(:games, url: games_create_path) do |f| %>
+  <%= f.text_field 'title', placeholder: 'title' %>
   <%= f.submit %>
 <% end %>
