--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -10,6 +10,8 @@ Title : <%= @game.title %> <br />
 <div class='player' id='last_player'>
   Player 2 : <span class='player_id'><%= @game_player_ids.last %></span>, score : <span class='score'><%= @last_score['1'] %></span> <br />
 </div>
+<div class='winner'>
+</div>
 
 <%= form_tag games_join_path do %>
   <%= hidden_field_tag 'game_id', @game.id %>
@@ -29,7 +31,7 @@ Title : <%= @game.title %> <br />
 <%= hidden_field_tag 'game_id', @game.id %>
 
 <% if @game.started? || @game.finished? %>
-  <div class='game_borad'>
+  <div class='game_board'>
     <% @last_matrix[0].length.times do |i| %>
       <div class='tiles' style='display: flex;'>
       <% @last_matrix[0].length.times do |j| %>
