로그인/로그아웃 링크 추가

--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,3 +1,4 @@
+LOGIN <br />
 <%= form_for(:accounts, url: accounts_login_path) do |f| %>
   <%= f.text_field(:username, placeholder: 'username') %>
   <%= f.password_field(:password, placeholder: 'password') %>
