--- a/app/views/accounts/new.html.erb
+++ b/app/views/accounts/new.html.erb
@@ -1,3 +1,4 @@
+SIGNUP <br />
 <%= form_for(:accounts, url: accounts_create_path) do |f| %>
   <%= f.text_field :username, placeholder: 'username' %>
   <%= f.password_field :password, placeholder: 'password' %>
