--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,9 @@
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <!-- sweetalert-->
+    <script src="/dist/sweetalert.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/dist/sweetalert.css">
   </head>
 
   <body>
@@ -19,9 +22,14 @@
     <%= yield %>
   </body>
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  <% if flash[:notice] %>
+  <% unless flash[:notice].nil? %>
     <script>
-      alert("<%= flash[:notice] %>");
+      swal({
+        title: 'Error!',
+        text: '<%= flash[:notice] %>',
+        type: 'error',
+        confirmButtonText: 'I Got It'
+      });
     </script>
   <% end %>
 </html>
