--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,8 @@
  *= require_tree .
  *= require_self
  */
+ @import "bootstrap";
+ @import "tether.min";
+ @import "tether-theme-arrows.min";
+ @import "tether-theme-basic.min"; 
+ @import "tether-theme-arrows-dark.min";
