--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,4 +1,6 @@
 <%= link_to 'New', games_new_path %> <br />
+<div class='list-group'>
 <% @games.each do |game| %>
-  <%= link_to "#{game.id}  : #{game.title}", games_show_path(game_id: game.id) %> <br />
+  <%= link_to "#{game.id}  : #{game.title}", games_show_path(game_id: game.id), class: 'list-group-item list-group-item-action' %>
 <% end %>
+</div>
