--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(:games, url: games_create_path) do |f| %>
+<%= form_for(:games, url: games_create_path, class: 'form-inline') do |f| %>
   <%= f.text_field 'title', placeholder: 'title' %>
-  <%= f.submit %>
+  <%= f.submit 'Create Game', class: 'btn btn-primary' %>
 <% end %>
